--- a/package.json
+++ b/package.json
@@ -5,28 +5,35 @@
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "ios": "expo start --ios"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.21.0",
+    "@expo/metro-runtime": "^3.2.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
-    "@types/react": "~18.2.45",
-    "expo": "~50.0.17",
-    "expo-status-bar": "~1.11.1",
+    "@types/react": "~18.2.79",
+    "axios": "^1.6.8",
+    "expo": "51",
+    "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.73.6",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.74.1",
+    "react-native-circular-progress-indicator": "^4.4.2",
+    "react-native-element-dropdown": "^2.10.4",
+    "react-native-gesture-handler": "^2.16.2",
+    "react-native-ionicons": "^4.6.5",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "^15.2.0",
+    "react-native-web": "^0.19.11",
     "styled-components": "^6.1.8",
-    "typescript": "^5.3.0"
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
