--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -1,15 +1,15 @@
-server.port = 8083
+server.port = 8081
 server.servlet.context-path=/agsp
 
 spring.datasource.url=jdbc:mysql://localhost:3306/agsp?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&use&Timezone=true&serverTimezone=America/Sao_Paulo
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=123
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect  
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
