--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port = 8083
 server.servlet.context-path=/agfp
 
-spring.datasource.url=jdbc:mysql://localhost:3306/agsp?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&use&Timezone=true&serverTimezone=America/Sao_Paulo
+spring.datasource.url=jdbc:mysql://localhost:3306/agfp?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&use&Timezone=true&serverTimezone=America/Sao_Paulo
 spring.datasource.username=root
-spring.datasource.password=123
+spring.datasource.password=
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect  
 
