--- a/back-end/pom.xml
+++ b/back-end/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.agsp</groupId>
 	<artifactId>agsp</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>agsp</name>
+	<name>agfp</name>
 	<description>Projeto faculdade Uninove</description>
 	<properties>
 		<java.version>21</java.version>
