--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -11,6 +11,8 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.format_sql=true
+spring.jackson.time-zone=America/Sao_Paulo
+spring.jpa.properties.hibernate.jdbc.time_zone=America/Sao_Paulo
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 spring.jackson.default-property-inclusion=NON_NULL
