--- a/front-end/package.json
+++ b/front-end/package.json
@@ -27,10 +27,10 @@
     "react-native-element-dropdown": "^2.10.4",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-ionicons": "^4.6.5",
+    "react-native-masked-text": "^1.13.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "^15.2.0",
     "react-native-web": "^0.19.11",
     "styled-components": "^6.1.8",
     "typescript": "~5.3.3"
