--- a/front-end/package.json
+++ b/front-end/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/stack": "^6.3.29",
     "@types/react": "~18.3.12",
     "axios": "^1.6.8",
+    "date-fns": "^4.1.0",
     "expo": "^52.0.5",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
