--- a/front-end/package.json
+++ b/front-end/package.json
@@ -19,20 +19,20 @@
     "@types/react": "~18.3.12",
     "axios": "^1.6.8",
     "date-fns": "^4.1.0",
-    "expo": "^52.0.5",
+    "expo": "~52.0.7",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.1",
+    "react-native": "0.76.2",
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-element-dropdown": "^2.10.4",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-ionicons": "^4.6.5",
-    "react-native-masked-text": "^1.13.0",
+    "react-native-masked-text": "^1.12.5",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.0.0",
-    "react-native-svg": "^15.9.0",
+    "react-native-screens": "~4.1.0",
+    "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
     "styled-components": "^6.1.8",
     "typescript": "~5.3.3"
