--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.servlet.context-path=/agfp
 
 spring.datasource.url=jdbc:mysql://localhost:3306/agfp?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&use&Timezone=true&serverTimezone=America/Sao_Paulo
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect  
 
